--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -47,6 +47,21 @@ body {
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
+.sidebar1 {
+
+    right: 0px;
+    width: 220px;
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
 }
 
 /* Sidebar navigation */
