--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -76,9 +76,11 @@ body {
 }
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
+.nav-sidebar > .active > a:focus,
+.nav-sidebar > .active > h4 {
   color: #fff;
   background-color: #428bca;
+  height: 30px;
 }
 
 
