--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -36,7 +36,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 20px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -52,7 +52,7 @@ body {
     right: 0px;
     width: 220px;
     position: fixed;
-    top: 51px;
+    top: 20px;
     bottom: 0;
     z-index: 1000;
     display: block;
@@ -131,5 +131,9 @@ body {
 .sidebar-nav-fixed {
 	width:20%;
 }
-
+.review-name{
+	left: 60px; 
+	position: relative; 
+	font-size: small;
+}
 
