--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -137,3 +137,17 @@ body {
 	font-size: small;
 }
 
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(66, 139, 202, 0.75);
+    width:100%;
+    height:100%;
+
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+}
+
